--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 API = https://autocloud.play/?prefix=TkdB
-SITE_NAME = NAGA
-HOST = 
-PORT =
+SITE_NAME = NAGA World
+HOST = 139.162.39.74
+PORT = 80
 DESC = Naga World
-TITLE = Naga
+TITLE = Naga World
 PAGE_LIMIT = 4
 BRAND_ID = 5f298f52b167ac6e145f690d
